# E6AMS-Project

./: .gitignore  CMakeLists.txt  main.c
Config/: transfer.bat  transferElf.sh
Frames/: appFrame.c  appFrame.h  dllFrame.c  dllFrame.h
Layers/: appLayer.c  appLayer.h  dllLayer.c  dllLayer.h
drivers/: buttonInterface.c  buttonInterface.h  hm-10.c  hm-10.h  lc-05.c  lc-05.h  uart.c  uart.h
external_libs/: global.h  md5.c  md5.h
external_libs/openssl/: md5.c  md5.h
libs/: lc-05.c  lc-05.h  uart.c  uart.h
